--- a/www.conf
+++ b/www.conf
@@ -124,7 +124,7 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 50
+pm.max_children = 10
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
@@ -293,6 +293,7 @@ pm.max_spare_servers = 3
 ; The access log file
 ; Default: not set
 ;access.log = log/$pool.access.log
+access.log = /proc/self/fd/2
 
 ; The access log format.
 ; The following syntax is allowed
