Turn on catch_workers_output

--- a/www.conf
+++ b/www.conf
@@ -430,7 +430,7 @@ access.log = /proc/self/fd/2
 ; Note: on highloaded environment, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
-;catch_workers_output = yes
+catch_workers_output = yes
 
 ; Decorate worker output with prefix and suffix containing information about
 ; the child that writes to the log and if stdout or stderr is used as well as
