Add Sentry support

--- a/php.ini
+++ b/php.ini
@@ -352,6 +352,8 @@ disable_classes =
 ; http://php.net/zend.enable-gc
 zend.enable_gc = On
 
+zend.exception_ignore_args = Off
+
 ; If enabled, scripts may be written in encodings that are incompatible with
 ; the scanner.  CP936, Big5, CP949 and Shift_JIS are the examples of such
 ; encodings.  To use this feature, mbstring extension must be enabled.
