--- a/php.ini
+++ b/php.ini
@@ -1344,7 +1344,7 @@ bcmath.scale = 0
 [Session]
 ; Handler used to store/retrieve data.
 ; http://php.net/session.save-handler
-session.save_handler = redis
+; session.save_handler = redis
 
 ; Argument passed to save_handler.  In the case of files, this is the path
 ; where data files are stored. Note: Windows users have to change this
@@ -1373,7 +1373,7 @@ session.save_handler = redis
 ; where MODE is the octal representation of the mode. Note that this
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
-session.save_path = "tcp://app-ca-dkezr3jt0fai.jmt7bl.0001.euc1.cache.amazonaws.com:6379?weight=1"
+; session.save_path = "tcp://app-ca-dkezr3jt0fai.jmt7bl.0001.euc1.cache.amazonaws.com:6379?weight=1"
 
 ; Whether to use strict session mode.
 ; Strict session mode does not accept an uninitialized session ID, and
