--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -10,7 +10,7 @@ server {
     listen       80; #ipv4
     server_name   _; #catch-all
 
-    root   /usr/share/nginx/html/;
+    root   /www/;
     index  index.php index.html;
 
     set $skip_cache 0;
